--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,5 +1,9 @@
 <div id="disqus_thread"></div>
 <script>
+    var disqus_config = function () {
+		this.page.url = '{{ page.url | absolute_url }}';
+      	this.page.identifier = '{{ page.url | absolute_url }}';
+    };    
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
